# Bank-Account-Management-App

./: .gitignore  CMakeLists.txt  main.c
domain/: domain.c  domain.h  tests_domain.c  tests_domain.h
repository/: repo.c  repo.h  tests_repo.c
service/: service.c  service.h  tests_service.c
user_interface/: console.c  console.h  ui.c  ui.h
validate/: tests_validate.c  tests_validate.h  validate.c  validate.h
